feat(): initial commit, setup with lein monolith and lein docker

--- a/apps/app-patients/.gitignore
+++ b/apps/app-patients/.gitignore
@@ -1,12 +1,9 @@
-/target
+# /target
 /classes
 /checkouts
-profiles.clj
 pom.xml
 pom.xml.asc
-*.jar
+# *.jar
 *.class
 /.lein-*
 /.nrepl-port
-.hgignore
-.hg/
