feat(): initialise apps-api-gateway and apps-patients with Compojure and Dockerfile s

--- a/apps/app-patients/Dockerfile
+++ b/apps/app-patients/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:8u181-alpine3.8
 
-COPY app-patients.jar /srv/app-patients.jar
-EXPOSE 3000
+COPY target/app-patients.jar /srv/app-patients.jar
+EXPOSE 3001
 
 CMD java -jar /srv/app-patients.jar
