feat(): User datatypes with defprotocol

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 /target
 /classes
 /checkouts
+.settings/
+.project/
 profiles.clj
 pom.xml
 pom.xml.asc
@@ -10,3 +12,5 @@ pom.xml.asc
 /.nrepl-port
 .hgignore
 .hg/
+.classpath
+
