--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,21 @@
 version: '3'
 services:
-
   db:
     image: postgres
     restart: always
     environment:
       POSTGRES_PASSWORD: example
 
+  kafka:
+    image: landoop/fast-data-dev:latest
+    ports:
+      - "2181:2181"
+      - "3030:3030"
+      - "8081-8083:8081-8083"
+      - "9581-9585:9581-9585"
+      - "9092:9092"
+    environment:
+      ADV_HOST: localhost
 
   app-api-gateway:
     build: apps/app-api-gateway
@@ -20,14 +29,10 @@ services:
     depends_on:
       - kafka
 
-  kafka:
-    image: landoop/fast-data-dev:latest
+  app-bookings:
+    build: apps/app-bookings
     ports:
-      - "2181:2181"
-      - "3030:3030"
-      - "8081-8083:8081-8083"
-      - "9581-9585:9581-9585"
-      - "9092:9092"
-    environment:
-      ADV_HOST: localhost
+      - "3002:3000"
+    depends_on:
+      - kafka
 
